--- a/doc/_static/css/custom.css
+++ b/doc/_static/css/custom.css
@@ -1,7 +1,3 @@
-div.body p, div.body dd, div.body li, div.body blockquote {
-    text-align: left !important;
-    -moz-hyphens: manual;
-    -ms-hyphens: manual;
-    -webkit-hyphens: manual;
-    hyphens: manual;
-}
+/*
+ * css to override sphinx theme
+ */
